--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Kevin Cosgrove
-#logo: /assets/img/headshot_circle.png
+logo: /assets/img/kevin_cosgrove.png
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
